fix: adjust submenu positioning in settings modal for proper alignment

--- a/scss/components/_settings-modal.scss
+++ b/scss/components/_settings-modal.scss
@@ -31,8 +31,8 @@
         display: none;
         position: absolute;
         top: 0;
-        left: 100%;
-        margin-left: 4px;
+        right: 100%;
+        margin-right: 4px;
         background: var(--color-bg);
         border: 1px solid var(--color-accent);
         border-radius: 4px;
